// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/UserNavigate-ee render snap 1`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ee render snap 2`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar ant-popover-open css-1wq79dc"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1lz0wpv"
            >
              <div
                class="header"
                title="Test name"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 1024 1024"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M938.667 153.6v599.467c0 38.4-29.867 68.266-68.267 68.266h-14.933V268.8c0-55.467-44.8-100.267-100.267-100.267H202.667V153.6c0-38.4 29.866-68.267 68.266-68.267H870.4c38.4 0 68.267 29.867 68.267 68.267M454.4 435.2l55.467 162.133H396.8z"
                      fill="#C3C6CD"
                    />
                    <path
                      d="M755.2 202.667H151.467c-36.267 0-66.134 29.866-66.134 66.133v601.6c0 38.4 29.867 68.267 66.134 68.267h601.6c36.266 0 66.133-29.867 66.133-66.134V268.8c2.133-36.267-27.733-66.133-64-66.133m-192 541.866L524.8 640H379.733l-38.4 104.533h-51.2l136.534-362.666h55.466l130.134 362.666z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    <div
                      class="flex-space-between"
                      id="change-language-trigger-node"
                    >
                      <span>
                        语言
                      </span>
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    个人中心
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <span
                    aria-label="notification"
                    class="anticon anticon-notification css-ehzaz2"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="notification"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
                      />
                    </svg>
                  </span>
                  <div
                    class="content-item-text"
                  >
                    系统公告
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m-.667-7.334v4h1.333v-4zm0-2.666V6h1.333V4.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看版本号
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m3.333-4L14.666 8l-3.333-2.667v2H6v1.334h5.333z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    退出登录
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ee render snap 3`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-hidden ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; pointer-events: none;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1lz0wpv"
            >
              <div
                class="header"
                title="Test name"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 1024 1024"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M938.667 153.6v599.467c0 38.4-29.867 68.266-68.267 68.266h-14.933V268.8c0-55.467-44.8-100.267-100.267-100.267H202.667V153.6c0-38.4 29.866-68.267 68.266-68.267H870.4c38.4 0 68.267 29.867 68.267 68.267M454.4 435.2l55.467 162.133H396.8z"
                      fill="#C3C6CD"
                    />
                    <path
                      d="M755.2 202.667H151.467c-36.267 0-66.134 29.866-66.134 66.133v601.6c0 38.4 29.867 68.267 66.134 68.267h601.6c36.266 0 66.133-29.867 66.133-66.134V268.8c2.133-36.267-27.733-66.133-64-66.133m-192 541.866L524.8 640H379.733l-38.4 104.533h-51.2l136.534-362.666h55.466l130.134 362.666z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    <div
                      class="flex-space-between"
                      id="change-language-trigger-node"
                    >
                      <span>
                        语言
                      </span>
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    个人中心
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <span
                    aria-label="notification"
                    class="anticon anticon-notification css-ehzaz2"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="notification"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
                      />
                    </svg>
                  </span>
                  <div
                    class="content-item-text"
                  >
                    系统公告
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m-.667-7.334v4h1.333v-4zm0-2.666V6h1.333V4.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看版本号
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m3.333-4L14.666 8l-3.333-2.667v2H6v1.334h5.333z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    退出登录
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserNavigate-ee should update the user's language when a language menu item is clicked. 1`] = `
<body>
  <div>
    <span
      class="ant-avatar ant-avatar-circle action-avatar ant-popover-open css-1wq79dc"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        T
      </span>
    </span>
  </div>
  <div>
    <div
      class="ant-popover ant-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
          style="padding: 0px;"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="css-1lz0wpv"
            >
              <div
                class="header"
                title="Test name"
              >
                Test name
              </div>
              <div
                class="content"
              >
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 1024 1024"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M938.667 153.6v599.467c0 38.4-29.867 68.266-68.267 68.266h-14.933V268.8c0-55.467-44.8-100.267-100.267-100.267H202.667V153.6c0-38.4 29.866-68.267 68.266-68.267H870.4c38.4 0 68.267 29.867 68.267 68.267M454.4 435.2l55.467 162.133H396.8z"
                      fill="#C3C6CD"
                    />
                    <path
                      d="M755.2 202.667H151.467c-36.267 0-66.134 29.866-66.134 66.133v601.6c0 38.4 29.867 68.267 66.134 68.267h601.6c36.266 0 66.133-29.867 66.133-66.134V268.8c2.133-36.267-27.733-66.133-64-66.133m-192 541.866L524.8 640H379.733l-38.4 104.533h-51.2l136.534-362.666h55.466l130.134 362.666z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    <div
                      class="flex-space-between ant-popover-open"
                      id="change-language-trigger-node"
                    >
                      <span>
                        语言
                      </span>
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                      <div
                        class="ant-popover ant-popover-placement-right"
                        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
                      >
                        <div
                          class="ant-popover-content"
                        >
                          <div
                            class="ant-popover-inner"
                            role="tooltip"
                            style="padding: 0px;"
                          >
                            <div
                              class="ant-popover-inner-content"
                            >
                              <div
                                class="css-1lz0wpv"
                              >
                                <div
                                  class="content"
                                >
                                  <div
                                    class="content-item"
                                  >
                                    <div
                                      class="content-item-text"
                                    >
                                      <label
                                        class="ant-radio-wrapper ant-radio-wrapper-checked full-width-element"
                                      >
                                        <span
                                          class="ant-radio ant-radio-checked"
                                        >
                                          <input
                                            checked=""
                                            class="ant-radio-input"
                                            type="radio"
                                          />
                                          <span
                                            class="ant-radio-inner"
                                          />
                                        </span>
                                        <span>
                                          中文
                                        </span>
                                      </label>
                                    </div>
                                  </div>
                                  <div
                                    class="content-item"
                                  >
                                    <div
                                      class="content-item-text"
                                    >
                                      <label
                                        class="ant-radio-wrapper full-width-element"
                                      >
                                        <span
                                          class="ant-radio"
                                        >
                                          <input
                                            class="ant-radio-input"
                                            type="radio"
                                          />
                                          <span
                                            class="ant-radio-inner"
                                          />
                                        </span>
                                        <span>
                                          English
                                        </span>
                                      </label>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 1.333A6.67 6.67 0 0 1 14.666 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8 6.67 6.67 0 0 1 8 1.333m-3.985 8.944c.979 1.46 2.448 2.39 4.091 2.39s3.113-.93 4.091-2.39a5.98 5.98 0 0 0-4.09-1.61 5.98 5.98 0 0 0-4.092 1.61M8 7.333a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    个人中心
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <span
                    aria-label="notification"
                    class="anticon anticon-notification css-ehzaz2"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="notification"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
                      />
                    </svg>
                  </span>
                  <div
                    class="content-item-text"
                  >
                    系统公告
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m-.667-7.334v4h1.333v-4zm0-2.666V6h1.333V4.667z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    查看版本号
                  </div>
                </div>
                <div
                  class="content-item"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m3.333-4L14.666 8l-3.333-2.667v2H6v1.334h5.333z"
                      fill="#C3C6CD"
                    />
                  </svg>
                  <div
                    class="content-item-text"
                  >
                    退出登录
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
